# hefesto-skill-generator

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  MEMORY.md  QWEN.md  README.md  RELEASE-NOTES-v1.0.0-LTS.md  _SKILL.md  _metadata.yaml  _ref_advanced.md  _ref_codeblocks.md  _ref_compatibility.md  _ref_headings.md  _ref_links.md  _ref_tables_lists.md  gen_skill.py  persist_skills_result.txt  pyproject.toml
.agents/: architecture-advisor.md  backend-engineer.md  cloud-engineer.md  delivery-manager.md  frontend-engineer.md  integration-modernizer.md  platform-delivery-engineer.md  principal-software-engineer.md  reliability-engineer.md  senior-reviewer.md  software-engineer.md  speckit-planner.md  test-engineer.md
.claude/: settings.local.json
.codex/: config.toml  validation-requested-missing-skills.txt  validation-tier-sa-after-update.txt  validation-tier-sa.txt
.context/: README.md  ai-assistant-guide.md
.github/: copilot-instructions.md  pull_request_template.md
ISSUE_TEMPLATE/: config.yml  feature_request.md
commands/: hefesto.adapt.md  hefesto.create-coala-memory.md  hefesto.create-e2e-demo.md  hefesto.create-phases.md  hefesto.delete.md  hefesto.detect.md  hefesto.extract.md  hefesto.help.md  hefesto.init.md  hefesto.list.md  hefesto.show.md  hefesto.sync.md  hefesto.validate.md  hefesto_create_impl.py  hefesto_init_impl.py  hefesto_resume_impl.py
docs/: ARCHITECTURE.md  README.md  RESET-RATIONALE.md
installer/: install.ps1  install.sh
knowledge/: INDEX.md
testes/: README.md  (+2 more)
(+981 files in other folders)
